exports[`api should execute a GET successfully with json 1`] = `
Object {
  "hello": "world"
}
`;

exports[`api should execute a POST successfully 1`] = `"ok"`;

exports[`api should reject for a not found error 1`] = `
Object {
  "code": 404,
  "data": "",
  "error": "Not Found",
  "status": "FAIL"
}
`;

exports[`api should reject for a server error with JSON response 1`] = `
Object {
  "code": 500,
  "data": Object {
    "error": "FAILED"
  },
  "error": "Internal Server Error",
  "status": "FAIL"
}
`;

exports[`api should reject for a server error with no response 1`] = `
Object {
  "code": 500,
  "data": "",
  "error": "Internal Server Error",
  "status": "FAIL"
}
`;
